--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -2355,6 +2355,13 @@ module = {
 };
 
 module = {
+  name = tpm;
+  common = commands/tpm.c;
+  efi = commands/efi/tpm.c;
+  enable = efi;
+};
+
+module = {
   name = tr;
   common = commands/tr.c;
 };
