grub-core/commands/measure.c: Add
Add "measure" command to extend arbitrary TPM PCRs
with strings and files.

Examples:
  measure -p 10 -f /path/to/file1 /file2 ./file3
  measure -p 0xA "foo $var"
  measure "foo $var"

Signed-off-by: Haris Okanovic <haris.okanovic@ni.com>

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -2305,6 +2305,12 @@ module = {
 };
 
 module = {
+  name = measure;
+  common = commands/measure.c;
+  enable = efi;
+};
+
+module = {
   name = mpi;
   common = lib/libgcrypt-grub/mpi/mpiutil.c;
   common = lib/libgcrypt-grub/mpi/mpi-bit.c;
